--- a/src/ru/vsu/cs/task5/ParamsDialog.form
+++ b/src/ru/vsu/cs/task5/ParamsDialog.form
@@ -91,7 +91,7 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Новая игра"/>
+              <text value="Пересоздать поле"/>
             </properties>
           </component>
           <component id="8fb66" class="javax.swing.JButton" binding="buttonOk">
